# DIAG

./: AGENTS.md  sysreport-20260323.tar.xz
adt/: CHANGELOG.md  CMakeLists.txt
adt/.forgejo/workflows/: rpm-build.yml  translations.yml
adt/.gear/: adt.spec
adt/man/: CMakeLists.txt
adt/man/en/: adt.man.in
adt/man/ru/: adt.man.in
adt/src/: CMakeLists.txt
adt/src/app/: adtapp.cpp  adtcommandlineparser.cpp  adtcommandlineparser.h  adtdbushelper.cpp  adtdbushelper.h  main.cpp
adt/src/controllers/: basecontroller.cpp  basecontroller.h  guicontroller.cpp  guicontroller.h
adt/src/gui/: detailsdialog.ui  mainwindow.cpp  (+6 more)
adt/ts/: adt_en.ts  adt_ru.ts
alterator-entry/: alterator-entry.spec  setup.py
alterator-entry/alterator_entry/: alterator_entry.py
alterator-entry/doc/: README.md
alterator-entry/schemas/: component.schema.json  edition.schema.json  service.schema.json
alterator-entry/scripts/: base2list  editions2packages  metadata2directory
diag-domain-client/: Makefile  diag-domain-client  diag-domain-client.man  diag-domain-client.spec
diag-domain-client/alterator/: diag-domain-client.backend  domain-client.diag
diag-domain-client/tests/: report_test.bats
diag-domain-controller/: diag-domain-controller  diag-domain-controller.spec
diag-domain-controller/alterator/: domain-controller.diag
diag-system-report/: diag-system-report  diag-system-report.spec
diag-system-report/alterator/: diag-system-report.backend  system-report.diag
diag-system-report/tests/: report_test.bats
system-report/: system-report
system-report/.gear/: rules
(+29 files in other folders)
